added swagger documentations for the new driver routes
